add descriptive title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <!--created a concise, descriptive title-->
+    <title>Horiseon Landing Page</title>
 </head>
 
 <body>
