add semantic HTML to footer

--- a/index.html
+++ b/index.html
@@ -101,9 +101,11 @@
 
     </main>
 
-    <div class="footer">
+    <!--changed div to semantic HTML footer and removed "footer" class-->
+    <footer>
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </footer>
+
   </body>
 </html>
