--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       <div class="content">
         <!--definitely want to change div to section because it contains h2-->
         <section class="search-engine-optimization">
-          <img src="./assets/images/search-engine-optimization.jpg" class="float-left"/>
+            <!--added alt text-->
+          <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Workspace with a laptop, coffee cup, cup filled with pens, and a notebook about SEO"/>
           <h2>Search Engine Optimization</h2>
           <p>
             The dominance of mobile internet use means that users are searching
@@ -46,7 +47,8 @@
         </section>
         <!--definitely want to change div to section because it contains h2-->
         <section id="online-reputation-management" class="online-reputation-management">
-          <img src="./assets/images/online-reputation-management.jpg" class="float-right"/>
+            <!--added alt text-->
+          <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Person working at a laptop with a reputation chart on the screen, a water cup to the side and a phone in the corner"/>
           <h2>Online Reputation Management</h2>
           <p>
             The web is full of opinions, and some of these can be negative.
@@ -58,7 +60,8 @@
         </section>
         <!--definitely want to change div to section because it contains h2-->
         <section id="social-media-marketing" class="social-media-marketing">
-          <img src="./assets/images/social-media-marketing.jpg" class="float-left"/>
+            <!--added alt text-->
+          <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Team members working at a table filled with various icons representing social media"/>
           <h2>Social Media Marketing</h2>
           <p>
             Social media continues to have a sizable influence on buying habits.
@@ -73,7 +76,8 @@
         <!--changed div to section-->
         <section class="benefit-lead">
           <h3>Lead Generation</h3>
-          <img src="./assets/images/lead-generation.png" />
+          <!--added alt text-->
+          <img src="./assets/images/lead-generation.png" alt="Funnel with a down-pointing arrow, with a gear going into the funnel and a coin coming out of the funnel" />
           <p>
             Inbound strategies for lead generation require less work for your
             business, bringing customers directly to your website.
@@ -82,7 +86,8 @@
         <!--changed div to section-->
         <section class="benefit-brand">
           <h3>Brand Awareness</h3>
-          <img src="./assets/images/brand-awareness.png" />
+          <!--added alt text-->
+          <img src="./assets/images/brand-awareness.png" alt="Top half of a body wearing a tea with a lightbulb radiating light as the head"/>
           <p>
             Users find your business through paid and organic searches,
             increasing the search ranking and visibility for your business.
@@ -91,7 +96,8 @@
         <!--changed div to section-->
         <section class="benefit-cost">
           <h3>Cost Management</h3>
-          <img src="./assets/images/cost-management.png" />
+          <!--added alt text-->
+          <img src="./assets/images/cost-management.png" alt="A gear in the background with three circles with dollar sides in front of the gear"/>
           <p>
             As the search ranking for your business increases, your advertising
             costs decrease, and you no longer need to advertise your page.
