reordered CSS selectors

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </header>
     <!--added main element to contain the bulk content of the page-->
     <main>
-      <!--can i change div to semantic html? tried changing it to <img>.. is this a pseudo element? added alt text; how do you check if alt text works?-->
-      <figure class="hero" alt="Group of team members overlooking mockups"></figure>
+      <!--changed div to figure-->
+      <figure class="hero"></figure>
       <!--thought about changing div to section but not sure..-->
       <div class="content">
         <!--definitely want to change div to section because it contains h2; added id to attach id in the nav bar to the section-->
