--- a/index.html
+++ b/index.html
@@ -1,117 +1,125 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <!--created a concise, descriptive title-->
-    <title>Horiseon Landing Page</title>
-  </head>
 
-  <body>
-    <!--changed div to semantic html element header and took out class=header after changing css to use element selector-->
-    <header>
-      <!--is span a pseudo-element?-->
-      <h1>Hori<span class="seo">seo</span>n</h1>
-      <!--changed div to semantic html nav-->
-      <nav>
-        <ul>
-          <li>
-            <a href="#search-engine-optimization">Search Engine Optimization</a>
-          </li>
-          <li>
-            <a href="#online-reputation-management">Online Reputation Management</a>
-          </li>
-          <li>
-            <a href="#social-media-marketing">Social Media Marketing</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <!--added main element to contain the bulk content of the page-->
-    <main>
-      <!--changed div to figure-->
-      <figure class="hero"></figure>
-      <div class="content">
-        <!--definitely want to change div to section because it contains h2; added id to attach id in the nav bar to the section-->
-        <section id="search-engine-optimization" class="content-blocks">
-            <!--added alt text-->
-          <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Workspace with a laptop, coffee cup, cup filled with pens, and a notebook about SEO"/>
-          <h2>Search Engine Optimization</h2>
-          <p>
-            The dominance of mobile internet use means that users are searching
-            for the right business as they travel, shop, or sit on their couch
-            at home. Search Engine Optimization (SEO) allows you to increase
-            your visibility and find the right customers for your business.
-          </p>
-        </section>
-        <!--definitely want to change div to section because it contains h2-->
-        <section id="online-reputation-management" class="content-blocks">
-            <!--added alt text-->
-          <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Person working at a laptop with a reputation chart on the screen, a water cup to the side and a phone in the corner"/>
-          <h2>Online Reputation Management</h2>
-          <p>
-            The web is full of opinions, and some of these can be negative.
-            Social media allows anyone with an internet connection to say
-            whatever they want about your business. Online Reputation Management
-            gives you the control over what potential customers see when they
-            search for your business.
-          </p>
-        </section>
-        <!--definitely want to change div to section because it contains h2-->
-        <section id="social-media-marketing" class="content-blocks">
-            <!--added alt text-->
-          <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Team members working at a table filled with various icons representing social media"/>
-          <h2>Social Media Marketing</h2>
-          <p>
-            Social media continues to have a sizable influence on buying habits.
-            Social media marketing helps you determine which platforms are
-            suited to your brand, using analytics to find the right markets and
-            increase your lead generation.
-          </p>
-        </section>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <!--created a concise, descriptive title-->
+  <title>Horiseon Landing Page</title>
+</head>
 
-      <div class="benefits">
-        <!--changed div to section-->
-        <section class="benefit-section">
-          <h3>Lead Generation</h3>
-          <!--added alt text-->
-          <img src="./assets/images/lead-generation.png" alt="Funnel with a down-pointing arrow, with a gear going into the funnel and a coin coming out of the funnel" />
-          <p>
-            Inbound strategies for lead generation require less work for your
-            business, bringing customers directly to your website.
-          </p>
-        </section>
-        <!--changed div to section-->
-        <section class="benefit-section">
-          <h3>Brand Awareness</h3>
-          <!--added alt text-->
-          <img src="./assets/images/brand-awareness.png" alt="Top half of a body wearing a tea with a lightbulb radiating light as the head"/>
-          <p>
-            Users find your business through paid and organic searches,
-            increasing the search ranking and visibility for your business.
-          </p>
-        </section>
-        <!--changed div to section-->
-        <section class="benefit-section">
-          <h3>Cost Management</h3>
-          <!--added alt text-->
-          <img src="./assets/images/cost-management.png" alt="A gear in the background with three circles with dollar sides in front of the gear"/>
-          <p>
-            As the search ranking for your business increases, your advertising
-            costs decrease, and you no longer need to advertise your page.
-          </p>
-        </section>
-      </div>
+<body>
+  <!--changed div to semantic html element header and took out class=header after changing css to use element selector-->
+  <header>
+    <!--is span a pseudo-element?-->
+    <h1>Hori<span class="seo">seo</span>n</h1>
+    <!--changed div to semantic html nav-->
+    <nav>
+      <ul>
+        <li>
+          <a href="#search-engine-optimization">Search Engine Optimization</a>
+        </li>
+        <li>
+          <a href="#online-reputation-management">Online Reputation Management</a>
+        </li>
+        <li>
+          <a href="#social-media-marketing">Social Media Marketing</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <!--added main element to contain the bulk content of the page-->
+  <main>
+    <!--changed div to figure-->
+    <figure class="hero"></figure>
+    <div class="content">
+      <!--definitely want to change div to section because it contains h2; added id to attach id in the nav bar to the section-->
+      <section id="search-engine-optimization" class="content-blocks">
+        <!--added alt text-->
+        <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
+          alt="Workspace with a laptop, coffee cup, cup filled with pens, and a notebook about SEO" />
+        <h2>Search Engine Optimization</h2>
+        <p>
+          The dominance of mobile internet use means that users are searching
+          for the right business as they travel, shop, or sit on their couch
+          at home. Search Engine Optimization (SEO) allows you to increase
+          your visibility and find the right customers for your business.
+        </p>
+      </section>
+      <!--definitely want to change div to section because it contains h2-->
+      <section id="online-reputation-management" class="content-blocks">
+        <!--added alt text-->
+        <img src="./assets/images/online-reputation-management.jpg" class="float-right"
+          alt="Person working at a laptop with a reputation chart on the screen, a water cup to the side and a phone in the corner" />
+        <h2>Online Reputation Management</h2>
+        <p>
+          The web is full of opinions, and some of these can be negative.
+          Social media allows anyone with an internet connection to say
+          whatever they want about your business. Online Reputation Management
+          gives you the control over what potential customers see when they
+          search for your business.
+        </p>
+      </section>
+      <!--definitely want to change div to section because it contains h2-->
+      <section id="social-media-marketing" class="content-blocks">
+        <!--added alt text-->
+        <img src="./assets/images/social-media-marketing.jpg" class="float-left"
+          alt="Team members working at a table filled with various icons representing social media" />
+        <h2>Social Media Marketing</h2>
+        <p>
+          Social media continues to have a sizable influence on buying habits.
+          Social media marketing helps you determine which platforms are
+          suited to your brand, using analytics to find the right markets and
+          increase your lead generation.
+        </p>
+      </section>
+    </div>
 
-    </main>
+    <div class="benefits">
+      <!--changed div to section-->
+      <section class="benefit-section">
+        <h3>Lead Generation</h3>
+        <!--added alt text-->
+        <img src="./assets/images/lead-generation.png"
+          alt="Funnel with a down-pointing arrow, with a gear going into the funnel and a coin coming out of the funnel" />
+        <p>
+          Inbound strategies for lead generation require less work for your
+          business, bringing customers directly to your website.
+        </p>
+      </section>
+      <!--changed div to section-->
+      <section class="benefit-section">
+        <h3>Brand Awareness</h3>
+        <!--added alt text-->
+        <img src="./assets/images/brand-awareness.png"
+          alt="Top half of a body wearing a tea with a lightbulb radiating light as the head" />
+        <p>
+          Users find your business through paid and organic searches,
+          increasing the search ranking and visibility for your business.
+        </p>
+      </section>
+      <!--changed div to section-->
+      <section class="benefit-section">
+        <h3>Cost Management</h3>
+        <!--added alt text-->
+        <img src="./assets/images/cost-management.png"
+          alt="A gear in the background with three circles with dollar sides in front of the gear" />
+        <p>
+          As the search ranking for your business increases, your advertising
+          costs decrease, and you no longer need to advertise your page.
+        </p>
+      </section>
+    </div>
 
-    <!--changed div to semantic HTML footer and removed "footer" class-->
-    <footer>
-        <!--changed h2 to h4-->
-      <h4>Made with ❤️️ by Horiseon</h4>
-      <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
-    </footer>
+  </main>
 
-  </body>
+  <!--changed div to semantic HTML footer and removed "footer" class-->
+  <footer>
+    <!--changed h2 to h4-->
+    <h4>Made with ❤️️ by Horiseon</h4>
+    <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
+  </footer>
+
+</body>
+
 </html>
